禁止放大动画

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@
         app:menu="@menu/bottom_nav_menu"
         app:itemIconTint="@color/selector_color"
         app:itemTextColor="@color/selector_color"
+        app:itemTextAppearanceActive="@style/bottom_selected_text"
+        app:itemTextAppearanceInactive="@style/bottom_normal_text"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
