--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@mipmap/comui_tab_home"
+        android:icon="@drawable/comui_tab_home"
         android:title="@string/home_image_view_text" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@mipmap/comui_tab_pond"
+        android:icon="@drawable/comui_tab_pond"
         android:title="@string/pond_image_view_text" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@mipmap/comui_tab_message"
+        android:icon="@drawable/comui_tab_message"
         android:title="@string/message_image_view_text" />
 
 </menu>
