--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,13 @@
         android:title="@string/home_image_view_text" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/comui_tab_pond"
-        android:title="@string/pond_image_view_text" />
-
-    <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_msg"
         android:icon="@drawable/comui_tab_message"
         android:title="@string/message_image_view_text" />
+
+    <item
+        android:id="@+id/navigation_mine"
+        android:icon="@drawable/comui_tab_pond"
+        android:title="@string/mine_image_view_text" />
 
 </menu>
