--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -16,7 +16,8 @@
             android:id="@+id/ad_content_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="100dp" />
+            android:layout_marginBottom="100dp"
+            android:scaleType="fitXY"/>
 
         <RelativeLayout
             android:id="@+id/cpoyright_layout"
