--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,16 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.MineFragment">
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout
+        android:id="@+id/login_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:paddingVertical="15dp"
+        >
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/photo_view"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/default_user_avatar"
+            android:layout_marginLeft="20dp"/>
+
+        <TextView
+            android:id="@+id/login_info_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/unlogin"
+            android:layout_toRightOf="@id/photo_view"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/color_333333"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/login_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_now"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@color/color_fed952"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/color_cdcdcd"/>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:background="@color/color_5a79b7"
-        android:text="我的" />
+        android:layout_height="wrap_content"
+        android:text="@string/video_play_setting"
+        android:drawableRight="@mipmap/arrow_right"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="20dp"
+        android:gravity="center_vertical"
+        android:textSize="16sp"
+        android:textColor="@color/color_333333"/>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_cdcdcd"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/share_imooc"
+        android:drawableRight="@mipmap/arrow_right"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="20dp"
+        android:gravity="center_vertical"
+        android:textSize="16sp"
+        android:textColor="@color/color_333333"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_cdcdcd"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/my_qrcode"
+        android:drawableRight="@mipmap/arrow_right"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="20dp"
+        android:gravity="center_vertical"
+        android:textSize="16sp"
+        android:textColor="@color/color_333333"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_cdcdcd"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/update_info"
+        android:drawableRight="@mipmap/arrow_right"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="20dp"
+        android:gravity="center_vertical"
+        android:textSize="16sp"
+        android:textColor="@color/color_333333"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_cdcdcd"/>
+
+
+
+</LinearLayout>
