登录逻辑处理

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="text_small">20dp</dimen>
     <dimen name="text_middle">25dp</dimen>
     <dimen name="text_big">30dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
