--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -54,6 +54,7 @@
         android:background="@color/color_cdcdcd"/>
 
     <TextView
+        android:id="@+id/video_setting_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/video_play_setting"
@@ -70,6 +71,7 @@
         android:background="@color/color_cdcdcd"/>
 
     <TextView
+        android:id="@+id/share_imooc_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/share_imooc"
@@ -86,6 +88,7 @@
         android:background="@color/color_cdcdcd"/>
 
     <TextView
+        android:id="@+id/my_qrcode_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/my_qrcode"
@@ -102,6 +105,7 @@
         android:background="@color/color_cdcdcd"/>
 
     <TextView
+        android:id="@+id/update_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/update_info"
