--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,9 +18,9 @@
         <item name="android:windowBackground">@drawable/bg_loading</item>
     </style>
 
-   <style name="bottom_normal_text">
-       <item name="android:textSize">13sp</item>
-   </style>
+    <style name="bottom_normal_text">
+        <item name="android:textSize">13sp</item>
+    </style>
 
     <style name="bottom_selected_text">
         <item name="android:textSize">13sp</item>
@@ -35,6 +35,15 @@
         <item name="android:textSize">@dimen/welcome_content</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
 </resources>
